--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "my-app",
   "type": "module",
   "scripts": {
-    "dev": "node_modules/.bin/tsx watch src/index.ts"
+    "dev": "node_modules/.bin/tsx watch src/index.ts",
+    "test": "jest --config=jest.config.ts"
   },
   "dependencies": {
     "@hono/node-server": "^1.13.8",
@@ -11,7 +12,12 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.14",
     "@types/node": "^20.11.17",
-    "tsx": "^4.7.1"
+    "jest": "^29.7.0",
+    "ts-jest": "^29.2.6",
+    "ts-node": "^10.9.2",
+    "tsx": "^4.7.1",
+    "typescript": "^5.8.2"
   }
 }
